--- a/ParkingLot.Web/Views/Home/Index.cshtml
+++ b/ParkingLot.Web/Views/Home/Index.cshtml
@@ -26,7 +26,6 @@
     <input id="endTime" type="text" class="timepicker" name="time" placeholder="End time" />
 </div>
 
-<canvas class="usage-chart"></canvas>
 
 <span class="max-usage-description">
     <label>Max Cars:</label>
@@ -39,5 +38,6 @@
 </span>
 
 @section scripts { 
+    @Scripts.Render("~/bundles/chart")
     @Scripts.Render("~/Scripts/app/home/index.js")
 }
