Config canvas to bind chart

--- a/ParkingLot.Web/Views/Home/Index.cshtml
+++ b/ParkingLot.Web/Views/Home/Index.cshtml
@@ -26,6 +26,7 @@
     <input id="endTime" type="text" class="timepicker" name="time" placeholder="End time" />
 </div>
 
+<canvas id="occupation-chart" class="usage-chart"></canvas>
 
 <span class="max-usage-description">
     <label>Max Cars:</label>
