--- a/ParkingLot.Web/Views/Home/Index.cshtml
+++ b/ParkingLot.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using System.Configuration;
 <div style="display: block">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -11,8 +11,8 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Get Data</a></li>
-                    <li><a href="#">All Time</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#getDataModal">Get Data</a></li>
+                    <li><a href="#" id="plotAllTimeData">All Time</a></li>
                     <li><a href="#">Select Parking Lot</a></li>
                 </ul>
             </div>
@@ -37,6 +37,30 @@
     <label>at time:</label>
     <label id="max-cars-time-label">HH:MM</label>
 </span>
+
+<!-- Modal -->
+<div class="modal fade" id="getDataModal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">API Url</h4>
+            </div>
+            <div class="modal-body">
+                <span>
+                    <input type="text" id="apiUrl" class="col-md-12" value="@ConfigurationManager.AppSettings["ApiUrl"]"/>
+                </span>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" id="getData" class="btn btn-default" data-dismiss="modal">Get Data</button>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 @section scripts { 
     @Scripts.Render("~/bundles/chart")
