--- a/ParkingLot.Web/Views/Shared/_Layout.cshtml
+++ b/ParkingLot.Web/Views/Shared/_Layout.cshtml
@@ -1,17 +1,19 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Betsson Parking Lot</title>
-    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/css")
 </head>
-<body> 
+<body ng-controller="ParkingLotController as app"> 
     @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/bundles/bootstrap")
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
