--- a/ParkingLot.Web/Content/mobile.css
+++ b/ParkingLot.Web/Content/mobile.css
@@ -8,18 +8,21 @@
 }
 
 .interval-range {
-	float: right;
-	padding: 5px;
-	margin-right: 10%;
+	padding-top: 5px;
 }
 
 .interval-range-label {
 	display: none;
 }
 
-.timepicker {
-	width: 90px;
-	margin: 10px 5px;
+.datetime-picker-input {
+	width: 100%;
+    padding: 5px 10px;
+}
+
+.datetime-picker-input input {
+	max-width: 200px;
+	float: right;
 }
 
 .usage-chart {
@@ -35,4 +38,8 @@
 
 .ui-timepicker-standard .ui-menu-item {
 	font-size: 12px;
+}
+
+.dropdown {
+	float: left;
 }
