--- a/ParkingLot.Web/Content/screen.css
+++ b/ParkingLot.Web/Content/screen.css
@@ -7,14 +7,18 @@
 		margin-top: 20px;
 	}
 
-	.timepicker {
-		width: 100px;
+	.datetime-picker-input {
+		width: 180px;
 		margin: 10px 15px;
+		padding: 0px;
 	}
 
 	.interval-range {
 		margin-right: 10%;
 		width: 20%;
+		float: right;
+		margin-left: 0;
+		padding: 5px;
 	}
 
 	.interval-range-label {
@@ -49,4 +53,5 @@
 	.ui-timepicker-standard .ui-menu-item {
 		font-size: 15.4px;
 	}
+
 }
