--- a/ParkingLot.Web/Views/Home/Index.cshtml
+++ b/ParkingLot.Web/Views/Home/Index.cshtml
@@ -24,8 +24,29 @@
 
     <div class="interval-range">
         <span class="interval-range-label">Select time range for analysis:</span>
-        <input id="startTime" type="text" class="timepicker" name="time" placeholder="Start time" />
-        <input id="endTime" type="text" class="timepicker" name="time" placeholder="End time" />
+
+        <div class="dropdown">
+            <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
+                <div class="input-group datetime-picker-input">
+                    <input type="text" class="form-control" date='MM/dd/yyyy HH:mm' data-ng-model="home.data.startRange" placeholder="Start time"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                </div>
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                <datetimepicker data-ng-model="home.data.startRange" data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }" />
+            </ul>
+        </div>
+
+        <div class="dropdown">
+            <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
+                <div class="input-group datetime-picker-input">
+                    <input type="text" class="form-control" date='MM/dd/yyyy HH:mm' data-ng-model="home.data.endRange" placeholder="End time"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                </div>
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                <datetimepicker data-ng-model="home.data.endRange" data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }" />
+            </ul>
+        </div>
+
     </div>
 
     <canvas id="parking-chart" class="usage-chart"></canvas>
