--- a/ParkingLot.Web/Views/Home/Index.cshtml
+++ b/ParkingLot.Web/Views/Home/Index.cshtml
@@ -15,8 +15,8 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li><a href="#" data-toggle="modal" data-target="#getDataModal">Get Data</a></li>
-                        <li><a href="#" ng-click="home.restoreFullData()">All Time</a></li>
-                        <li><a href="#">Select Parking Lot</a></li>
+                        <li><a href="#" data-toggle="collapse" data-target="#myNavbar" ng-click="home.restoreFullData()">All Time</a></li>
+                        <li><a href="#" data-toggle="collapse" data-target="#myNavbar">Select Parking Lot</a></li>
                     </ul>
                 </div>
             </div>
@@ -66,7 +66,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal" data-toggle="collapse" data-target="#myNavbar">&times;</button>
                     <h4 class="modal-title">API Url</h4>
                 </div>
                 <div class="modal-body">
@@ -75,8 +75,8 @@
                     </span>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="home.getData()" >Get Data</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="collapse" data-target="#myNavbar">Cancel</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="collapse" data-target="#myNavbar" ng-click="home.getData()" >Get Data</button>
                 </div>
             </div>
         </div>
