last front-end feature

--- a/ParkingLot.Web/Views/Home/Index.cshtml
+++ b/ParkingLot.Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#" data-toggle="modal" data-target="#getDataModal">Get Data</a></li>
                         <li><a href="#" data-toggle="collapse" data-target="#myNavbar" ng-click="home.restoreFullData()">All Time</a></li>
-                        <li><a href="#" data-toggle="collapse" data-target="#myNavbar">Select Parking Lot</a></li>
+                        <li><a href="#" data-toggle="collapse" data-target="#myNavbar" ng-click="home.selectParkingLot()">Select Parking Lot</a></li>
                     </ul>
                 </div>
             </div>
